# pd-manager

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COMMANDS.md  Dockerfile  Dockerfile.manager  Dockerfile.slave  README.md  conanfile.py  docker-compose.yml  import_ip_to_country.sh  pd-manager-docker.cfg  pd-slave-docker.cfg  vcpkg.json
.github/workflows/: build.yml
CMake/Modules/: FindBNCSUTIL.cmake  FindMYSQL.cmake  FindSTORMLIB.cmake  Findbncsutil.cmake
common/src/: common_util.cpp  common_util.h  config.cpp  config.h  masl_protocol_2.h  regions.h  sha1.cpp  sha1.h
data/mapcfgs/: README.md  map.cfg  map_legacy.cfg
data/maps/: README.md
data/public/: game_list.js
ghost/: CMakeLists.txt  README.md  bncsutilinterface.h  bnet_tour.cpp  bnet_tour.h  bnetprotocol.h  configuration.h  custom_game.h  default.cfg  didyouknow.txt  gameloaded.txt  gameover.txt  ghost.cpp  ghost.h  ipblacklist.txt  language.cfg  language.cpp  language.h  masl_manager.cpp  masl_manager.h  masl_protocol_2.h  masl_slavebot.cpp  masl_slavebot.h  motd.txt  pd-slave.service  psr.cpp  psr.h  socket.cpp  typedefs.h  util.cpp  util.h
ghost/src/: bncsutilinterface.cpp  bnet.cpp  bnet.h  bnetprotocol.h  configuration.h  didyouknow.cpp  didyouknow.h  game_base.cpp  game_base.h  game_custom.cpp  game_custom.h  game_customdota.cpp  game_customdota.h  game_div1dota.cpp  game_div1dota.h  gameplayer.cpp  gameplayer.h  gameprotocol.cpp  gameprotocol.h  gameslot.cpp  gameslot.h  ghost.cpp  ghost.h  ghostdb.cpp  ghostdb.h  gpsprotocol.cpp  gpsprotocol.h  includes.h  language.cpp  language.h  main.cpp  map.cpp  map.h  masl_manager.cpp  masl_manager.h  masl_protocol_2.h  profiler.h  psr.cpp  psr.h  socket.cpp  (+5 more)
ghost/test/: CMakeLists.txt  PsrTestSample.h  test.cpp
manager/: 1_database_migration_initial.sql  2_database_migration_2025_05_24.sql  3_database_migration_2025_10_17.sql  CMakeLists.txt  README.md  database_schema.sql  default.cfg  language.cfg  pd-manager.cfg  pd-manager.service
manager/src/: bncsutilinterface.cpp  bncsutilinterface.h  bnet.cpp  bnet.h  bnet_tour.cpp  bnet_tour.h  bnetprotocol.cpp  bnetprotocol.h  commandpacket.cpp  commandpacket.h  custom_game.h  ghost.cpp  ghost.h  ghostdb.cpp  ghostdb.h  language.cpp  language.h  masl_manager.cpp  masl_manager.h  masl_protocol_2.h  masl_slavebot.cpp  masl_slavebot.h  next_combination.h  psr.cpp  psr.h  socket.cpp  socket.h  util.cpp  util.h
manager/test/: CMakeLists.txt  test.cpp
slave_cfgs/: s01.cfg  s01.cfg.example  s02.cfg  s03.cfg
test/: CMakeLists.txt  test.cpp
